# crcle

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example
examples/: example.cpp
include/crcle/: crcle.hpp
